kubernets-files/todoapp-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: todoapp-mysql
  name: todoapp-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: todoapp-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/todoapp-network: "true"
        io.kompose.service: todoapp-mysql
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: todo_db
            - name: MYSQL_ROOT_PASSWORD
              value: test@123
          image: mysql:5.7
          name: todoapp-mysql
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: todoapp-volume
      restartPolicy: Always
      volumes:
        - name: todoapp-volume
          persistentVolumeClaim:
            claimName: todoapp-volume
status: {}
