kubernets-files/todoapp-phpmyadmin-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: todoapp-phpmyadmin
  name: todoapp-phpmyadmin
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 80
  selector:
    io.kompose.service: todoapp-phpmyadmin
status:
  loadBalancer: {}
